[package]
name = "hologram-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram criterion benchmarks."

# The lib carries no benchmarks; only the criterion `[[bench]]` targets do.
# Disabling the lib's default libtest bench harness lets `cargo bench` forward
# criterion arguments (e.g. --measurement-time) without libtest rejecting them.
[lib]
bench = false

[dependencies]
hologram-host     = { workspace = true }
hologram-types    = { workspace = true }
hologram-ops      = { workspace = true }
hologram-graph    = { workspace = true }
hologram-compiler = { workspace = true, features = ["std"] }
hologram-exec     = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
uor-prism         = { workspace = true }

[features]
# Multi-core: run the benches with the backend's worker pool engaged
# (`cargo bench -p hologram-bench --features parallel`) to measure the
# UOR hierarchical model leveraging the whole processor surface.
parallel = ["hologram-backend/parallel", "hologram-exec/parallel"]

[dev-dependencies]
criterion = { workspace = true }
smallvec  = { workspace = true }

[[bench]]
name = "decode_step"
harness = false

[[bench]]
name = "decode_gemv"
harness = false

[[bench]]
name = "content_reuse"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "production"
harness = false

[[bench]]
name = "fusion"
harness = false

[[bench]]
name = "tiered_executor"
harness = false

[[bench]]
name = "lut_activation"
harness = false

[[bench]]
name = "dequant_activation"
harness = false

[[bench]]
name = "source_lowering"
harness = false
