[package]
name = "hologram-cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cascade state machine: 7-stage evaluation pipeline with certificate memoization"

[dependencies]
hologram-core = { workspace = true }
hologram-graph = { workspace = true }
hologram-archive = { workspace = true }
hologram-exec = { workspace = true }
blake3 = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true, optional = true }
uor-foundation = { workspace = true }

[features]
parallel = ["dep:rayon", "hologram-graph/parallel", "hologram-exec/parallel"]
