[package]
name = "hologram-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram CLI: compile, execute, bench, inspect."

[[bin]]
name = "hologram"
path = "src/main.rs"

[dependencies]
hologram-compiler = { workspace = true }
hologram-exec     = { workspace = true }
hologram-backend  = { workspace = true }
hologram-archive  = { workspace = true }
hologram-graph    = { workspace = true }
hologram-host     = { workspace = true }
clap              = { workspace = true }
# Hologram's CLI is an application-author surface; it consumes the
# prism façade per wiki ADR-031.
uor-prism         = { workspace = true }
