[package]
name = "hologram-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram CLI: compile, execute, bench, inspect."

[[bin]]
name = "hologram"
path = "src/main.rs"

[dependencies]
# The CLI is a host binary: it opts the otherwise-`no_std` library crates
# back into `std` and selects the CPU backend.
hologram-compiler = { workspace = true, features = ["std"] }
hologram-exec     = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
hologram-graph    = { workspace = true }
hologram-host     = { workspace = true, features = ["std"] }
clap              = { workspace = true }
# Hologram's CLI is an application-author surface; it consumes the
# prism façade per wiki ADR-031.
uor-prism         = { workspace = true }
