[package]
name = "hologram-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram CLI: the one `hologram` binary — compile/execute/bench/inspect plus the deployment-substrate node (store/route/serve)."

[[bin]]
name = "hologram"
path = "src/main.rs"

[dependencies]
# The CLI is a host binary: it opts the otherwise-`no_std` library crates
# back into `std` and selects the CPU backend.
hologram-compiler = { workspace = true, features = ["std"] }
hologram-exec     = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
hologram-graph    = { workspace = true }
hologram-types     = { workspace = true, features = ["std"] }
clap              = { workspace = true }
# Hologram's CLI is an application-author surface; it consumes the
# prism façade per wiki ADR-031.
uor-prism         = { workspace = true }
# The `node` subcommand group (absorbed from the former hologram-substrate-cli, D13):
# a native redb store, the Wasmtime engine, and the live HTTP-CAS + κ-XOR DHT transports.
hologram-space        = { workspace = true }
hologram-store-native = { workspace = true }
hologram-runtime      = { workspace = true, features = ["engine-wasmtime"] }
hologram-net          = { workspace = true, features = ["live", "tcp"] }
pollster              = { workspace = true }
tokio                 = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
# The node module's inline tests run against the reference MemKappaStore.
hologram-tck = { workspace = true }

[features]
default = []
frontend-python = ["hologram-compiler/frontend-python"]
frontend-rust = ["hologram-compiler/frontend-rust"]
frontend-typescript = ["hologram-compiler/frontend-typescript"]
