[package]
name = "hologram-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram compiler: Graph -> Prism pipelines (per-node CompileUnit) -> .holo archive."

[dependencies]
hologram-graph    = { workspace = true }
hologram-archive  = { workspace = true }
hologram-backend  = { workspace = true }
hologram-host     = { workspace = true }
hologram-types    = { workspace = true }
hologram-ops      = { workspace = true }
uor-foundation    = { workspace = true }
blake3            = { workspace = true, features = ["std"] }
hashbrown         = { workspace = true }
thiserror         = { workspace = true }
smallvec          = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
hologram-archive = { workspace = true }

[features]
default = []
