[package]
name = "hologram-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram compiler: Graph -> Prism pipelines (per-node CompileUnit) -> .holo archive."

[dependencies]
hologram-graph    = { workspace = true }
hologram-archive  = { workspace = true }
hologram-backend  = { workspace = true }
hologram-host     = { workspace = true }
hologram-types    = { workspace = true }
hologram-ops      = { workspace = true }
uor-foundation    = { workspace = true }
uor-prism         = { workspace = true }
hashbrown         = { workspace = true }
thiserror         = { workspace = true, default-features = false }
smallvec          = { workspace = true }
nom               = { workspace = true }
proc-macro2       = { workspace = true, optional = true }
rustpython-parser = { workspace = true, optional = true }
syn               = { workspace = true, optional = true }
swc_common        = { workspace = true, optional = true }
swc_ecma_ast      = { workspace = true, optional = true }
swc_ecma_parser   = { workspace = true, optional = true }
tracing           = { workspace = true, optional = true }

[dev-dependencies]
hologram-archive = { workspace = true, features = ["std"] }

[features]
# `no_std` + `alloc` by default; `std` (host default) enables `tracing`
# diagnostics and the std error surface.
default = ["std"]
frontend-python = ["std", "dep:rustpython-parser"]
frontend-rust = ["std", "dep:proc-macro2", "dep:syn"]
frontend-typescript = [
    "std",
    "dep:swc_common",
    "dep:swc_ecma_ast",
    "dep:swc_ecma_parser",
]
std = [
    "dep:tracing",
    "thiserror/std",
    "uor-prism/std",
    "uor-foundation/std",
    "hologram-host/std",
    "hologram-backend/std",
    "hologram-archive/std",
]
