[package]
name = "hologram-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lossless compression via UOR ring algebra observables"

[dependencies]
hologram-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["hologram-core/std"]
