[package]
name = "hologram-conformance"
version.workspace = true
edition.workspace = true
publish = false
description = "BDD (cucumber) conformance runner + honesty meta-gate for the hologram refactor."

[lib]
doctest = false

[dependencies]
cucumber = "0.21"

[dev-dependencies]
tokio = { workspace = true }
# GV-1 (R1 traceability) is witnessed against the existing substrate realizations:
# a ContainerManifest embeds its operand κs and references() recovers exactly them.
hologram-space = { path = "../hologram-space", default-features = false }
# HF-1 (.holo v3 is the one container) opens a real `.holo` v3 archive whose AppManifest
# section carries a single-tensor-plan manifest — the degenerate single-layer case.
hologram-archive = { path = "../hologram-archive" }
# SP-3 / LAW-3 are witnessed by driving the **real** `hologram::Client` over `SpikeSpace` — an
# external-crate `Space` impl (D21/D28): the spike crate now provides only that reference space,
# and the Client comes from the facade. Client accepting an outside space with no in-tree
# privilege is the LAW-3 witness; compile→provision→run through it is the SP-3 witness.
hologram = { package = "uor-hologram", path = "../..", features = ["client"] }
hologram-spike-sp3 = { path = "../hologram-spike-sp3" }
smallvec = { workspace = true }
# SP-1 (passing the TCK is conformance) runs the shared conformance battery against the
# reference store — the same battery every backend runs (substrate-tripling discipline).
hologram-tck = { path = "../hologram-tck" }

[[test]]
name = "bdd"
harness = false

[[test]]
name = "meta_gate"
harness = true
