# This crate is excluded from the host workspace (wasm32-only) and built
# standalone via `scripts/build-emulator.sh`. An empty `[workspace]` table makes
# it its own workspace root, so it builds correctly no matter where the checkout
# lives (including inside another repo, e.g. a nested worktree) — cargo's
# workspace search stops here instead of walking up.
[workspace]

[package]
name = "hologram-emulator-codemodule"
description = "The hologram system-emulator codemodule — the emulator core compiled to a hologram Wasm container (the κ-addressed execution surface of ADR-009)"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hologram-Technologies/holospaces"
publish = false

# A hologram container codemodule: a Wasm module that exports the container ABI
# (hg_*) and imports only the `hologram` host ABI, run by hologram's engine. It
# wraps the no_std emulator core (hologram_emulator::emulator). Built for wasm32
# by scripts/build-emulator.sh; not part of the host workspace build.
[lib]
crate-type = ["cdylib"]

[dependencies]
hologram-emulator = { path = "../hologram-emulator", default-features = false }
# A no_std allocator for the container (the emulator's RAM lives on the heap).
dlmalloc = { version = "0.2", features = ["global"] }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
