[package]
name = "hologram-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram runtime executor: InferenceSession + Executor + BufferArena."

[dependencies]
hologram-host    = { workspace = true }
hologram-backend = { workspace = true }
hologram-archive = { workspace = true }
hologram-graph   = { workspace = true }
thiserror        = { workspace = true }
parking_lot      = { workspace = true }
tracing          = { workspace = true }
tokio            = { workspace = true, optional = true }

[dev-dependencies]
hologram-compiler = { workspace = true }
hologram-graph    = { workspace = true }
uor-foundation    = { workspace = true }
smallvec          = { workspace = true }

[features]
default = []
async = ["dep:tokio"]
# Architectural surface for parallel-within-level dispatch (spec VIII.2).
# The exec plan emits per-level kernel-call indices; the executor walks
# each level. Sound parallelism within a level requires splitting the
# workspace into disjoint per-call mutable fragments — out of scope
# here, since `Backend::dispatch` consumes `&mut Workspace`. GPU
# backends parallelize internally via their command queues. Enabling
# the feature tightens the `SessionBackend` bounds with `Clone + Send
# + Sync` so a future per-slot-disaggregated executor can require them.
parallel = []
