[package]
name = "hologram-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram runtime executor: InferenceSession over a content-addressed buffer pool."

[dependencies]
hologram-host    = { workspace = true }
hologram-ops     = { workspace = true }
hologram-backend = { workspace = true }
hologram-archive = { workspace = true }
hologram-graph   = { workspace = true }
uor-foundation   = { workspace = true }
uor-prism        = { workspace = true }
hashbrown        = { workspace = true }
smallvec         = { workspace = true }
thiserror        = { workspace = true, default-features = false }

[dev-dependencies]
# Integration tests execute real kernels, so they pull the CPU backend
# and the std surface of the otherwise-no_std deps.
hologram-compiler = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
hologram-graph    = { workspace = true }
uor-foundation    = { workspace = true }
smallvec          = { workspace = true }

[features]
# `no_std` + `alloc` by default; `std` (host default) enables the std
# error surface.
default = ["std"]
std = [
    "thiserror/std",
    "uor-prism/std",
    "uor-foundation/std",
    "hologram-host/std",
    "hologram-backend/std",
    "hologram-archive/std",
]
# Architectural surface for parallel-within-level dispatch (spec VIII.2).
# The exec plan emits per-level kernel-call indices; the executor walks
# each level. Sound parallelism within a level requires splitting the
# workspace into disjoint per-call mutable fragments — out of scope
# here, since `Backend::dispatch` consumes `&mut Workspace`. GPU
# backends parallelize internally via their command queues. Enabling
# the feature tightens the `SessionBackend` bounds with `Clone + Send
# + Sync` so a future per-slot-disaggregated executor can require them.
parallel = []
