[package]
name = "hologram-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram runtime executor: InferenceSession over a content-addressed buffer pool."

[dependencies]
hologram-types   = { workspace = true }
hologram-ops     = { workspace = true }
hologram-backend = { workspace = true }
hologram-archive = { workspace = true }
hologram-graph   = { workspace = true }
uor-foundation   = { workspace = true }
uor-prism        = { workspace = true }
hashbrown        = { workspace = true }
smallvec         = { workspace = true }
thiserror        = { workspace = true, default-features = false }

[dev-dependencies]
# Integration tests execute real kernels, so they pull the CPU backend
# and the std surface of the otherwise-no_std deps.
hologram-compiler = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
hologram-graph    = { workspace = true }
uor-foundation    = { workspace = true }
smallvec          = { workspace = true }

[features]
tiered-exec = []
# `no_std` + `alloc` by default; `std` (host default) enables the std
# error surface.
default = ["std"]
std = [
    "thiserror/std",
    "uor-prism/std",
    "uor-foundation/std",
    "hologram-types/std",
    "hologram-backend/std",
    "hologram-archive/std",
]
# Multi-core execution. Forwards to `hologram-backend/parallel`, which makes
# each matmul dispatch fan its cache-oblivious recursion across the in-tree
# worker pool (disjoint output tiles → one sequential recursion per core).
# This is intra-kernel parallelism (a single `dispatch` uses every core), so
# it needs no workspace splitting. It also tightens the `SessionBackend`
# bounds with `Clone + Send + Sync` for a future per-slot cross-kernel
# (within-schedule-level) executor.
parallel = ["hologram-backend/parallel"]
