[package]
name = "hologram-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram C ABI + WASM bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hologram-compiler = { workspace = true }
hologram-exec     = { workspace = true }
hologram-archive  = { workspace = true }
hologram-backend  = { workspace = true }
hologram-graph    = { workspace = true }
uor-foundation    = { workspace = true }

[features]
default = []
wasm = []
