[package]
name = "hologram-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram C ABI + WASM bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hologram's C ABI is an application-author surface; it imports the
# prism façade per wiki ADR-031 rather than the substrate directly.
hologram-compiler = { workspace = true }
hologram-exec     = { workspace = true }
hologram-archive  = { workspace = true }
hologram-backend  = { workspace = true }
hologram-graph    = { workspace = true }
uor-prism         = { workspace = true }

[features]
default = []
wasm = []
