[package]
name = "hologram-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram C ABI + WASM bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hologram's C ABI is an application-author surface; it imports the
# prism façade per wiki ADR-031 rather than the substrate directly.
# Host shared library: opts the library crates back into `std` + CPU backend.
hologram-compiler = { workspace = true, features = ["std"] }
hologram-exec     = { workspace = true, features = ["std"] }
hologram-archive  = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-graph    = { workspace = true }
uor-prism         = { workspace = true }

[features]
default = []
wasm = []
