[package]
name = "hologram-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Expression graph, subgraphs, fusion engine, parallel scheduling"

[dependencies]
hologram-core = { workspace = true, features = ["std"] }
hologram-ops = { workspace = true }
rkyv = { workspace = true }
smallvec = { workspace = true }
tinyvec = { workspace = true }
rayon = { workspace = true, optional = true }

[features]
parallel = ["dep:rayon"]
