[package]
name = "hologram-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram graph IR (arena-based DAG, schedule, registries)."

[dependencies]
hologram-ops   = { workspace = true }
hologram-types = { workspace = true }
smallvec       = { workspace = true }
libm           = { workspace = true }

[features]
default = []
