[package]
name = "hologram-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram operation markers + Term-tree emitters + reference evaluators."

[dependencies]
uor-foundation = { workspace = true }
hologram-host  = { workspace = true }
hologram-types = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
hologram-host  = { workspace = true }

[features]
default = []
