[package]
name = "hologram-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram operation markers + Term-tree emitters + reference evaluators."

[dependencies]
uor-foundation     = { workspace = true }
uor-prism          = { workspace = true }
hologram-types     = { workspace = true }
libm               = { workspace = true }

[dev-dependencies]

[features]
default = []
